feat: Implement database-backed user and group management, add OIDC and SAML identity providers, and expose OIDC client configuration.